# lede-17.01.4-Mod

./: .gitignore  Makefile  README  cksum.sh  clean_all.sh  def_config.sh  download_all.sh  generate_conf_file.sh  generate_workflow_yml.sh  git_commit.sh  git_push.sh  make_all.sh  make_tar.sh  mount_build_dir.sh  mount_tmpfs.sh  new_version.sh  pull_code.sh  refresh_config.sh  refresh_feeds.sh  refresh_pkg.sh  rules.mk  umount_build_dir.sh  umount_tmpfs.sh  version
.github/: build-lede-template.yml  lede-dl.yml
.github/backup/: download.pl  install_python2.sh
.github/workflows/: CI.yml  build-lede-CSAC.yml  build-lede-a3004ns.yml  build-lede-csac.yml  build-lede-domywifi-dw33d.yml  build-lede-ghl-r-001-e.yml  build-lede-ghl-r-001-f.yml  build-lede-ghl-r-001.yml  build-lede-hq55-v1.yml  build-lede-hq55.yml  build-lede-newifi-d2.yml  build-lede-tl-wdr4310-v1.yml  build-lede-tl-wdr7500-v3.yml  build-lede-tl-wr1041n-v2.yml  build-lede-tl-wr841-v8-cn.yml  build-lede-tl-wr841-v8.yml  build-lede-tl-wr841-v9.yml  build-lede-tl-wr842n-v2-cn.yml  build-lede-tl-wr842n-v2.yml  build-lede-tl-wr941n-v7.yml  build-lede-tl-wr941nd-v2.yml  build-lede-tl-wr941nd-v6-cn.yml  build-lede-tl-wr941nd-v6.yml  build-lede-wr1200js-ram512m.yml  build-lede-wr1200js.yml  build-lede-y1s.yml  fetch-cache.yml  lede-dl.yml
conf/: .config.5k-w20  .config.CSAC  .config.a3004ns  .config.csac  .config.domywifi-dw22d-v1  .config.domywifi-dw22d-v2  .config.domywifi-dw33d  .config.ew1200  .config.ghl-r-001  .config.ghl-r-001-e  .config.ghl-r-001-f  .config.hc5661  .config.hc5962  .config.hd51-n  .config.hq55  .config.hq55-v1  .config.hw24g  .config.link7  .config.miwifi-mini  .config.mw310r-v4  .config.mw450r-v3  .config.newifi-d1  .config.newifi-d2  .config.phicomm-k2t  .config.rg-nbr700gw  .config.tl-wdr4310-v1  .config.tl-wdr7500-v3  .config.tl-wr1041n-v2  .config.tl-wr740n-v3  .config.tl-wr740n-v4  .config.tl-wr841-v3  .config.tl-wr841-v5  .config.tl-wr841-v7  .config.tl-wr841-v8  .config.tl-wr841-v8-cn  .config.tl-wr841-v9  .config.tl-wr842n-v2  .config.tl-wr842n-v2-cn  .config.tl-wr842n-v3  .config.tl-wr885n-v1  (+10 more)
config/: Config-build.in  Config-devel.in  Config-images.in  Config-kernel.in
feeds/luci/: luci.mk
feeds/luci.tmp/: .packageinfo  location
feeds/luci.tmp/info/: .files-packageinfo-11112  .files-packageinfo-125924  .files-packageinfo.mk  .packageinfo-applications_luci-app-adblock  .packageinfo-applications_luci-app-advanced-reboot  .packageinfo-applications_luci-app-ahcp  .packageinfo-applications_luci-app-aria2  .packageinfo-applications_luci-app-asterisk  .packageinfo-applications_luci-app-commands  .packageinfo-applications_luci-app-coovachilli  .packageinfo-applications_luci-app-ddns  .packageinfo-applications_luci-app-diag-core  .packageinfo-applications_luci-app-diag-devinfo  .packageinfo-applications_luci-app-dump1090  .packageinfo-applications_luci-app-dynapoint  .packageinfo-applications_luci-app-firewall  .packageinfo-applications_luci-app-freifunk-diagnostics  .packageinfo-applications_luci-app-freifunk-policyrouting  .packageinfo-applications_luci-app-freifunk-widgets  .packageinfo-applications_luci-app-fwknopd  .packageinfo-applications_luci-app-hd-idle  .packageinfo-applications_luci-app-ltqtapi  .packageinfo-applications_luci-app-meshwizard  (+87 more)
feeds/packages.tmp/: .packageinfo  location
feeds/routing.tmp/: .packageinfo  location
feeds/routing/batctl/: Makefile
feeds/telephony.tmp/: .packageinfo  location
include/: cmake.mk  download.mk  image.mk  kernel-build.mk  kernel.mk  local-development.mk  package.mk  prereq-build.mk  prereq.mk  rootfs.mk  target.mk
package/: Makefile
package/base-files/: Makefile  image-config.in
package/extra/dnsforwarder-alt/src/: .gitignore  COPYING  INSTALL  README.md  StatisticTemplate.html  addresslist.c  addresslist.h  array.c  array.h  bst.c  bst.h  cacheht.c  cacheht.h  cachettlcrtl.c  cachettlcrtl.h  common.h  config.h.in  configure  configure.ac  default.config  default.en.config  dnscache.c  dnscache.h  dnsgenerator.c  dnsgenerator.h  dnsparser.c  dnsparser.h  dnsrelated.c  dnsrelated.h  domainstatistic.c  domainstatistic.h  downloader.c  downloader.h  dynamichosts.c  dynamichosts.h  filter.c  filter.h  goodiplist.c  goodiplist.h  hcontext.c  (+65 more)
package/extra/dnsforwarder-alt/src/codeblocks/: dnsforwarder.cbp
package/extra/dnsforwarder-alt/src/codeblocks_win/: dnsforwarder.cbp
package/extra/dnsforwarder-alt/src/test/: testutils.c  testutils.h
package/extra/dnsforwarder-alt/src/test/bst/: bst.cbp  main.c
package/extra/dnsforwarder-alt/src/test/linkedqueue/: linkedqueue.cbp  main.c
package/extra/dnsforwarder-alt/src/test/mcontext/: main.c  mcontext.cbp
package/extra/dnsforwarder-alt/src/test/pipes/: main.c  pipe.cbp
package/extra/dnsforwarder-alt/src/test/ptimer/: main.c  ptimer.cbp
package/extra/dnsforwarder-alt/src/test/stablebuffer/: main.c  test.cbp
package/extra/dnsforwarder-alt/src/test/stringchunk/: main.c  stringchunk.cbp
package/extra/dnsforwarder-alt/src/test/stringlist/: main.c  stringlist.cbp
package/extra/dnsforwarder-alt/src/test/system/: main.c  system.cbp
package/extra/dnsforwarder-alt/src/test/timedtask/: main.c  timedtask.cbp
package/extra/dnsforwarder-alt/src/test/utils/: main.c  utils.cbp
package/extra/dnsforwarder-alt/src/test/winmsgque/: main.c  winmsgque.cbp
scripts/: download.pl  env  feeds  ipkg-build  ubinize-image.sh
tests/: test_invariant_server.c
toolchain/: Config.in
toolchain/binutils/: Config.in  Config.version  Makefile
toolchain/fortify-headers/: Makefile
toolchain/gcc/: Config.in  Config.version  common.mk
toolchain/gdb/: Makefile
toolchain/glibc/: Config.in  Config.version
toolchain/kernel-headers/: Makefile
toolchain/musl/: Config.version  common.mk
tools/: Makefile
tools/mklibs/: Makefile
tools/upx/: Makefile
(+1922 files in other folders)
